# infra

./: .env  .gitignore  .gitmodules  README.md  TODO.md  app.py  bootstrap.md  deploy.nix  dump_script.py  flake.nix  home.nix  lib.nix  main.py  module.nix  pyproject.toml  result  treefmt.nix  update.sh
backend/: .env  .env.development  makeAccessCodes.ts  package-lock.json  package.json
backend/src/: accessCodeCheck.ts  registerGuest.ts  server.ts
code_gen/: code_gen.py  mongo_feeder.py
doc/: todo.md  update.md
docs/: bootstrap.md
frontend/: .env.production  default.nix  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
hardware/: myskus.nix  parok.nix
home/: darwin.nix  default.nix  flake.nix  home.nix  kulich.nix  nixvim.nix  nvim.nix  parok.nix
home/dotfiles/: alacritty-darwin.yml  lfcd  lfrc
home/modules/: develop.nix  duckdb.nix  home.nix  ipython.nix  macos.nix  minimal.nix  (+4 more)
hosts/: darwin.nix  default.nix  kulich.nix  lampin.nix  mac.nix  myskus.nix  parok-wsl.nix  parok.nix  sf-new.nix  sf.nix
kulich-api/: Cargo.toml  default.nix  module.nix
kulich-api/src/: main.rs
lib/: darwin-flake-module.nix  default.nix  deploy.nix  home.nix  shell.nix  vim.nix  vpsfree.nix
modules/: agenix.nix  home-manager.nix  wifi.nix  wireless-networks.nix
nixos/: parok.nix
overlays/: nushell.nix
secrets/: default.nix  secrets.nix  wireless-networks.age
templates/python/: .gitignore  flake.nix  pyproject.toml  treefmt.nix
utils/: code_gauge.py  data_loader.py  filters.py
vlada_dashboard/: app.py  cli.py
(+110 files in other folders)
