[package]
name = "kulich-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
clap = { version = "4.5.15", features = [ "derive" ] }
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = [ "with-chrono-0_4" ] }
serde = { version = "1.0.206", features = [ "derive" ] }
chrono = { version = "0.4.38", features = [ "serde" ] }
